# mech23-slack

./: .gitignore  README.md  app.py  gcal-to-slack.py  main.sh  mech_a_internal.ipynb  mech_a_internal.py  mech_office.ipynb  mech_office.py  pyproject.toml  requirements.txt  test.ipynb  test.py
